packages/app/src/modules/home/HomeHero.module.scss
.hero {
	background: linear-gradient(-33deg, var(--background-alt-blue-france) 39%, var(--background-alt-purple-glycine) 113%);
}

.heroContent {
	display: flex;
	flex-direction: column;
	gap: 2rem;
}

.cta.cta {
	@include respond-to(sm) {
		justify-content: center;
		width: 100%;
	}
}

.infoList {
	display: flex;
	flex-direction: column;
	gap: 2rem;
	padding: 1.5rem;
}

.infoItem {
	align-items: center;
	display: flex;
	gap: 2rem;
}

.infoItemIcon {
	align-items: center;
	background: var(--background-default-grey);
	border-radius: 50%;
	color: var(--artwork-minor-blue-france);
	display: flex;
	flex-shrink: 0;
	height: 4rem;
	justify-content: center;
	width: 4rem;
}

.infoItemContent {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}

.infoItemTitle {
	font-size: 1.25rem;
	font-weight: 700;
	line-height: 1.75rem;
}

